--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,10 @@ body {
     text-align: center;
 }
 
+a:hover {
+    color: white;
+}
+
 
 .section {
 
@@ -46,16 +50,22 @@ body {
 
 .section h2 {
     font-size: 35px;
-    display: inline-block;
+    display: flex;
     padding-top: 30px;
     padding-bottom: 10px;
 }
 
+.section p {
+    line-height: 25px;
+    font-weight: 600;
+}
+
 .footer {
-width: 100%;
 bottom: 0;
+width: 100%;
+height: 150px;
 text-align: center;
-margin-top:auto;
+background-color: var(--blend);
 
 }
 
@@ -66,12 +76,72 @@ margin-top:auto;
     padding: 50px;
 }
 
+.footer p {
+    font-weight: 600; 
+}
+
 .footer h2 {
     font-size: 35px;
     display: inline-block;
     padding-top: 30px;
     padding-bottom: 10px;
 }
+
+.card {
+    display: inline-block;
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    flex: 0 0 300px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    margin: 20px;
+    max-width: 400px;
+    max-height: 250px;
+  } 
+
+  .image-box{
+    place-content: center;
+    flex-wrap: wrap;
+    gap: 120px;
+  }
+  
+  
+  img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 20px;
+    bottom: 0;
+    left: 20px;
+    right: 0;
+    height: 250px;
+    width: 400px;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: var(--blend);
+  }
+  
+  .image-wrapper {
+    position: relative;
+  }
+  
+  .image-wrapper:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
 
 
 @media screen and (min-width: 768px) {
